--- a/www/index.html
+++ b/www/index.html
@@ -19,11 +19,12 @@
             top: 0; left: 0; width: 100%; height: 100%;
             display: flex; flex-direction: column; align-items: center; justify-content: center;
             pointer-events: none;
+            z-index: 20; /* Ensure UI is above touch zones */
         }
         #hud {
             position: absolute; top: 15px; left: 15px;
             color: #0ff; font-size: 16px; text-shadow: 0 0 10px #0ff;
-            z-index: 10;
+            z-index: 25;
         }
         #touch-controls {
             position: absolute; bottom: 0; left: 0; width: 100%; height: 70%;
